Day 1 Cookies, what's needed in requests

--- a/day1-9-8-22.md
+++ b/day1-9-8-22.md
@@ -2,8 +2,37 @@
 
 Lions Den is an old system, and without direct access to the database from which it draws its information, our advising app will not be able to easily retrieve the course data.  As such, we'll want to create a bot that gets the relevant course data and stores all of it in a file in a format that's easily usable by our app.  The format we'll be using is called JSON (JavaScript Object Notation).  A bot that does this is called a web scraper.  To do this, we'll need to have it simulate the steps that a person would do: make a course search for all courses and manually retrieve the data for each course one page at a time.  The bot of course will accomplish this task a little differently than we would as it will not be using a mouse and a keyboard to navigate through the results and it will be working with source code rather than the output we see on the screen.  This means we will need to look "under the hood" to see the form data that's being sent and the HTML that's used for displaying the course information to determine how we program the bot.  
 
-## Request/Response Observation
+## Inspection of Requests and Responses
 + To determine the necessary request data (header and body), open up the Developer console first, make a search for courses at https://lionsden.molloy.edu/ICS/Course_Search/Course_Search.jnz?portlet=Course_Schedules&screen=Advanced+Course+Search&screenType=next and check the Network tab:
 ![image](https://user-images.githubusercontent.com/9159008/183238756-8840d8a2-812f-4c81-9156-efd5ff2d7110.png)
 + The relevant request is under `Course_Search.jnz?portlet=Course_Schedules&screen=Advanced+Course+Search&screenType=next`.
-+ Trial and error by removing and modifying request data can tell you what's essential for it to succeed.  Using a tool such as Burp Suite Proxy allows you to modify and repeat the requests so you can see those that provide the desired response data, which in this case is the list of courses.  We'll spare you from this tedious work, and let you know what's needed.
++ Trial and error by removing and modifying request data can tell you what's essential for it to succeed.  Using a tool such as Burp Suite Proxy allows you to modify and repeat the requests and see the response.  This way you can see those that provide the desired response data, which in this case will be the list of courses.  We'll spare you from this tedious work, and let you know what's needed:
+  + **ASP.NET_SessionId Cookie**: When you first visit the site, the response will set this header to some "randomly generated number encoded into a 24-character string" (https://docs.microsoft.com/en-us/dotnet/api/system.web.sessionstate.sessionidmanager?view=netframework-4.8#remarks)
+  + Content-type header describing the format of the form data encoding: `"content-type" : "multipart/form-data; boundary=----FormBoundary"` (https://stackoverflow.com/questions/3508338/what-is-the-boundary-in-multipart-form-data)
+  + **method: "POST"**: This is the request method, which means there will be data in the body that's not part of the URL that's being requested.  The data in this case will be the encoded form data (https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods/POST)
+  + **Value of hidden `___BrowserRefresh` form field**: There will be a new value each time we request a list of courses in a search or go through the pages in a search.  Using the same value twice gives you the following fun error message:
+![image](https://user-images.githubusercontent.com/9159008/183279980-6c36a39d-8bd9-4a6f-a15b-a8d3dde4d4eb.png)
+  + **Body data (Payload)**: Includes value of hidden `___BrowserRefresh` form field mentioned above: This will be a long string of names of fields and their values, separated by `----FormBoundary` indicated in the boundary of the `content-type` header and new lines (`\n`).  It'll be one long string that looks like the following (browser refresh key will be replaced with some value):
+```
+------FormBoundary\nContent-Disposition: form-data; name="__EVENTTARGET"\n\npg0$V$ltrNav\n------FormBoundary\nContent-Disposition: form-data; name="__EVENTARGUMENT"\n\n\n------FormBoundary\nContent-Disposition: form-data; name="___BrowserRefresh"\n\nbrowser refresh key\n------FormBoundary\nContent-Disposition: form-data; name="pg0$V$ddlTerm"\n\n2022;FA\n------FormBoundary\nContent-Disposition: form-data; name="pg0$V$ddlDept"\n\n\n------FormBoundary\nContent-Disposition: form-data; name="pg0$V$ddlCourseFrom"\n\n\n------FormBoundary\nContent-Disposition: form-data; name="pg0$V$ddlCourseTo"\n\n\n------FormBoundary\nContent-Disposition: form-data; name="pg0$V$ddlTitleRestrictor"\n\nBeginsWith\n------FormBoundary\nContent-Disposition: form-data; name="pg0$V$txtTitleRestrictor"\n\n\n------FormBoundary\nContent-Disposition: form-data; name="pg0$V$ddlCourseRestrictor"\n\nBeginsWith\n------FormBoundary\nContent-Disposition: form-data; name="pg0$V$txtCourseRestrictor"\n\n\n------FormBoundary\nContent-Disposition: form-data; name="pg0$V$ddlDivision"\n\n\n------FormBoundary\nContent-Disposition: form-data; name="pg0$V$ddlMethod"\n\n\n------FormBoundary\nContent-Disposition: form-data; name="pg0$V$ddlTimeFrom"\n\n\n------FormBoundary\nContent-Disposition: form-data; name="pg0$V$ddlTimeTo"\n\n\n------FormBoundary\nContent-Disposition: form-data; name="pg0$V$days"\n\nrdAnyDay\n------FormBoundary\nContent-Disposition: form-data; name="pg0$V$ddlFaculty"\n\n\n------FormBoundary\nContent-Disposition: form-data; name="pg0$V$ddlCampus"\n\n\n------FormBoundary\nContent-Disposition: form-data; name="pg0$V$ddlBuilding"\n\n\n------FormBoundary\nContent-Disposition: form-data; name="pg0$V$ddlSecStatus"\n\nOpenFull\n------FormBoundary\nContent-Disposition: form-data; name="pg0$V$txtMin"\n\n\n------FormBoundary\nContent-Disposition: form-data; name="pg0$V$txtMax"\n\n\n------FormBoundary\nContent-Disposition: form-data; name="pg0$V$hiddenCache"\n\nfalse\n------FormBoundary\nContent-Disposition: form-data; name="pg0$V$btnSearch"\n\nSearch\n------FormBoundary--
+```
+
+## Cookies 
+
+Even if you don't log in, cookies can be used to store information about your behavior.  If a server sends a response with a `Set-Cookie:` header, it will be sent with every subsequent request on that same domain until it expires or you delete it.  This means that if you search for Computer Science courses and then Computer Information Systems courses, the server could "know" that someone searched for both terms because you'd be sending the same cookie that was unique to you each time.  Cookies can also be used to remove the need to log in with your username and password each time you visit a new page because it could set a cookie on your computer that identifies you.  As you visit different pages on the same site, your browser will send it back to the server.  But if you delete that cookie, you will need to log in again.  You can try this on the course search (without logging in):
+
+After visit and refresh:
+![image](https://user-images.githubusercontent.com/9159008/183281649-b1a70bbd-fe6b-4479-9015-4fa803ab8c8f.png)
+
+Check cookie and delete it (select it and hit the Delete key):
+![image](https://user-images.githubusercontent.com/9159008/183281831-b5a87ea7-5d53-4e3e-a506-17192e6fd553.png)
+
+Now new session cookie is generated:
+![image](https://user-images.githubusercontent.com/9159008/183281952-97da7924-eec6-497a-9664-7b33539d2b72.png)
+
+## High-level Web Scraping Strategy
+ 1. To perform our search, we will need to first get a valid ASP.NET SessionId cookie and the initial browser refresh key value we'll use to allow us to make a search so we will make a `GET` request to https://lionsden.molloy.edu/ICS/Course_Search/Course_Search.jnz?portlet=Course_Schedules&screen=Advanced+Course+Search&screenType=next to get these needed values.
+ 2. We will then make a POST request to make the search for all courses for the given semester with these values.
+ 3. We will use the text from the table headers to determine the structure of the course data table (e.g., which column represents the course code, the professor's name, etc.).
+ 4. We will get each course row of data, storing each cell in the appropriate property determined by the number of the column it appears in that row according to step 3.
+ 5. We will repeatedly extract the next browser refresh key from the HTML of the search results and use it to get the next page's search results.
