Add request header picture

--- a/day1-9-8-22.md
+++ b/day1-9-8-22.md
@@ -21,6 +21,7 @@ Lions Den is an old system, and without direct access to the database from which
 
 Even if you don't log in, cookies can be used to store information about your behavior.  If a server sends a response with a `Set-Cookie:` header, it will be sent with every subsequent request on that same domain until it expires or you delete it.  This means that if you search for Computer Science courses and then Computer Information Systems courses, the server could "know" that someone searched for both terms because you'd be sending the same cookie that was unique to you each time.  Cookies can also be used to remove the need to log in with your username and password each time you visit a new page because it could set a cookie on your computer that identifies you.  As you visit different pages on the same site, your browser will send it back to the server.  But if you delete that cookie, you will need to log in again.  You can try this on the course search (without logging in):
 
+**Response Header cookies**:
 After visit and refresh:
 ![image](https://user-images.githubusercontent.com/9159008/183281649-b1a70bbd-fe6b-4479-9015-4fa803ab8c8f.png)
 
@@ -29,6 +30,10 @@ Check cookie and delete it (select it and hit the Delete key):
 
 Now new session cookie is generated:
 ![image](https://user-images.githubusercontent.com/9159008/183281952-97da7924-eec6-497a-9664-7b33539d2b72.png)
+
+**Request Header cookies**
+* The cookies that are set by the server in the response header are then sent back in the cookie request header:
+![image](https://user-images.githubusercontent.com/9159008/183308852-bfd1bca8-10b7-40c3-9959-35bd3c628e90.png)
 
 ## High-level Web Scraping Strategy
  1. To perform our search, we will need to first get a valid ASP.NET SessionId cookie and the initial browser refresh key value we'll use to allow us to make a search so we will make a `GET` request to https://lionsden.molloy.edu/ICS/Course_Search/Course_Search.jnz?portlet=Course_Schedules&screen=Advanced+Course+Search&screenType=next to get these needed values.
