Add info about POST method and body data

--- a/day1-9-8-22.md
+++ b/day1-9-8-22.md
@@ -8,7 +8,7 @@ Lions Den is an old system, and without direct access to the database from which
 + The relevant request is under `Course_Search.jnz?portlet=Course_Schedules&screen=Advanced+Course+Search&screenType=next`.
 + Trial and error by removing and modifying request data can tell you what's essential for it to succeed.  Using a tool such as Burp Suite Proxy allows you to modify and repeat the requests and see the response.  This way you can see those that provide the desired response data, which in this case will be the list of courses.  We'll spare you from this tedious work, and let you know what's needed:
   + **ASP.NET_SessionId Cookie**: When you first visit the site, the response will set this header to some "randomly generated number encoded into a 24-character string" (https://docs.microsoft.com/en-us/dotnet/api/system.web.sessionstate.sessionidmanager?view=netframework-4.8#remarks)
-  + Content-type header describing the format of the form data encoding: `"content-type" : "multipart/form-data; boundary=----FormBoundary"` (https://stackoverflow.com/questions/3508338/what-is-the-boundary-in-multipart-form-data)
+  + **Content-type header describing the format of the form data encoding**: `"content-type" : "multipart/form-data; boundary=----FormBoundary"` (https://stackoverflow.com/questions/3508338/what-is-the-boundary-in-multipart-form-data).
   + **method: "POST"**: This is the request method, which means there will be data in the body that's not part of the URL that's being requested.  The data in this case will be the encoded form data (https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods/POST)
   + **Value of hidden `___BrowserRefresh` form field**: There will be a new value each time we request a list of courses in a search or go through the pages in a search.  Using the same value twice gives you the following fun error message:
 ![image](https://user-images.githubusercontent.com/9159008/183279980-6c36a39d-8bd9-4a6f-a15b-a8d3dde4d4eb.png)
@@ -34,6 +34,22 @@ Now new session cookie is generated:
 **Request Header cookies**
 * The cookies that are set by the server in the response header are then sent back in the cookie request header:
 ![image](https://user-images.githubusercontent.com/9159008/183308852-bfd1bca8-10b7-40c3-9959-35bd3c628e90.png)
+
+## POST method and body data
+
+When you submit a form with a lot of information or sensitive information such as a username and password, you'll usually be making a POST request.  If you specify a GET method for the HTML of a form, the data will become part of the so-called query string in the URL, which is what appears after the question mark.  For example, if you have inputs named `username` and `password` and you submitted a form with a GET method to `https://www.mysite.com/login`, the request would look something like `https://www.mysite.com/login?username=foo&password=secret`.  The query string here would be `username=foo&password=secret`.  Clearly, the aforementioned URL would be bad to store in the browser history of a public computer as you wouldn't want to store usernames and passwords.  On the other hand, if you were doing a search, you might want to save the data as part of the URL.  So, it'd be reasonable to say have a GET request like `https://www.mysite.com/search?q=foo`, when a person makes a request to `https://www.mysite.com/search` and enters a query of `foo` in a text input named `q`.
+
+When you do a course search on Lions Den, the POST method is used.  Although it might be useful to save the criteria from previous searches, this is not how it's done on Lions Den.  Also, a lot more data that you don't see is sent in hidden inputs, as you can tell by inspecting the payload of the response:  
+
+![image](https://user-images.githubusercontent.com/9159008/183341020-eb22497b-cb7d-4789-8804-043a66e914ba.png)
+and 
+![image](https://user-images.githubusercontent.com/9159008/183340811-b9b868f8-ffe7-40ae-aeaa-a5a3600ffa9c.png)
+
+In particular, this includes a **___BrowserRefresh** value needed for searches that could only be used once.  Therefore, even if you were able to make a GET request, you wouldn't be able to bookmark a previous search that you made as the __BrowserRefresh value would need to change.  One piece of data that's not needed and will need to be ommitted in our automated request is the hidden **__VIEWSTATE** input, which is very long and in this case most likely contains encrypted information about data that's been entered (https://docs.microsoft.com/en-us/previous-versions/aspnet/bb386448(v=vs.100)#background).  This is used to for example, if we search for 2022 Fall courses make sure that the term that's selected is 2022 Fall as well as save the values of hidden inputs.
+
+![image](https://user-images.githubusercontent.com/9159008/183339948-4931a5c1-9016-4cb3-a3d9-3299b923b237.png)
+
+Since we don't know how to change this encrypted value to say store the appropriate __BrowserRefresh value, which always changes, using a __VIEWSTATE from a previous search, if checked against our current search with a different __BrowserRefresh value, seems to cause the search to fail.
 
 ## High-level Web Scraping Strategy
  1. To perform our search, we will need to first get a valid ASP.NET SessionId cookie and the initial browser refresh key value we'll use to allow us to make a search so we will make a `GET` request to https://lionsden.molloy.edu/ICS/Course_Search/Course_Search.jnz?portlet=Course_Schedules&screen=Advanced+Course+Search&screenType=next to get these needed values.
