Add information about NPM

--- a/day1-9-8-22.md
+++ b/day1-9-8-22.md
@@ -57,3 +57,8 @@ Since we don't know how to change this encrypted value to say store the appropri
  3. We will use the text from the table headers to determine the structure of the course data table (e.g., which column represents the course code, the professor's name, etc.).
  4. We will get each course row of data, storing each cell in the appropriate property determined by the number of the column it appears in that row according to step 3.
  5. We will repeatedly extract the next browser refresh key from the HTML of the search results and use it to get the next page's search results.
+
+## Node Package Manager
+First, you'll want to get an understanding of Node packages and modules.  Node packages allow you to make use of code that other people have written in your application.  For example, the [date-fns package](https://www.npmjs.com/package/date-fns) contains a function that allows you to get the number of years, months, hours, minutes, and seconds between two dates via the function [intervalToDuration](https://date-fns.org/v2.29.1/docs/intervalToDuration#examples).  NPM (Node Package Manager: https://www.tutorialspoint.com/nodejs/nodejs_npm.htm) maintains a searchable list of published packages that you can use in your code by including them in the package.json file.  Then you will be able to install them all by using `npm install` in the directory containing this file, or you can install individual packages like `date-fns` with `npm install date-fns`, which will add it to your package.json file.  If you create something useful that other people can use in their projects, you can even publish your own package on NPM!
+
+You may hear the terms package and module used interchangably, but generally, a package will consist of a group of related modules (which might only be one) and that "is described by a `package.json` file."  A module is anything you can include with `require`.  See: https://stackoverflow.com/questions/20008442/difference-between-a-module-and-a-package-in-node-js and https://docs.npmjs.com/about-packages-and-modules).  `date-fns` can be considered a package or a module whose functionality can be used with `require('date-fns')`.  When you require it like that, you are usually getting all of the functionality, which will sometimes be present in the `index.__ file` of the repository or its `src` (source files) directory linked to on NPM (https://github.com/date-fns/date-fns/tree/main/src).  But packages like `date-fns` can be a directory and in that case you can include specific files if you don't need all of the functions it provides.  For example, you can use `require('date-fns/intervalToDuration')` if you only needed that function (https://github.com/date-fns/date-fns/tree/main/src/intervalToDuration).  For this particular example, it'll use the `index.ts` file of the `intervalToDuration` folder.  You can get some hands-on experience using package.json here: https://www.freecodecamp.org/learn/back-end-development-and-apis/#managing-packages-with-npm .  
