Getting dependencies directions with pictures

--- a/day1-9-8-22.md
+++ b/day1-9-8-22.md
@@ -62,3 +62,21 @@ Since we don't know how to change this encrypted value to say store the appropri
 First, you'll want to get an understanding of Node packages and modules.  Node packages allow you to make use of code that other people have written in your application.  For example, the [date-fns package](https://www.npmjs.com/package/date-fns) contains a function that allows you to get the number of years, months, hours, minutes, and seconds between two dates via the function [intervalToDuration](https://date-fns.org/v2.29.1/docs/intervalToDuration#examples).  NPM (Node Package Manager: https://www.tutorialspoint.com/nodejs/nodejs_npm.htm) maintains a searchable list of published packages that you can use in your code by including them in the package.json file.  Then you will be able to install them all by using `npm install` in the directory containing this file, or you can install individual packages like `date-fns` with `npm install date-fns`, which will add it to your package.json file.  If you create something useful that other people can use in their projects, you can even publish your own package on NPM!
 
 You may hear the terms package and module used interchangably, but generally, a package will consist of a group of related modules (which might only be one) and that "is described by a `package.json` file."  A module is anything you can include with `require`.  See: https://stackoverflow.com/questions/20008442/difference-between-a-module-and-a-package-in-node-js and https://docs.npmjs.com/about-packages-and-modules).  `date-fns` can be considered a package or a module whose functionality can be used with `require('date-fns')`.  When you require it like that, you are usually getting all of the functionality, which will sometimes be present in the `index.__ file` of the repository or its `src` (source files) directory linked to on NPM (https://github.com/date-fns/date-fns/tree/main/src).  But packages like `date-fns` can be a directory and in that case you can include specific files if you don't need all of the functions it provides.  For example, you can use `require('date-fns/intervalToDuration')` if you only needed that function (https://github.com/date-fns/date-fns/tree/main/src/intervalToDuration).  For this particular example, it'll use the `index.ts` file of the `intervalToDuration` folder.  You can get some hands-on experience using package.json here: https://www.freecodecamp.org/learn/back-end-development-and-apis/#managing-packages-with-npm .  
+
+## Getting started and the initial request to get the session cookie/browser refresh key
+You can install `node` on your computer, but if you want to get to completing the tasks quickly, you can use `replit.com`.  If you haven't already, sign up for a GitHub account at https://www.github.com .  Then go to https://replit.com/languages/nodejs .  When asked to sign in, you can do so with your GitHub account.  After doing so, click the "Create Repl" button:
+![image](https://user-images.githubusercontent.com/9159008/184059642-295906bd-7b53-4313-a622-b3aa4497e26b.png)
+
+After doing so (perhaps first changing the title to something more memorable), you should see the following:
+
+![image](https://user-images.githubusercontent.com/9159008/184059843-f67c4c13-1958-465d-b544-2b4f03619e48.png)
+
+To get the needed information for this step, we will be using two node packages: [axios](https://www.npmjs.com/package/axios) to make the requests to LionsDen Course Search and get the responses and [Fast HTML Parser](https://www.npmjs.com/package/node-html-parser) (node-html-parser).  As noted earlier, you should user `require('module name')` and store the result in a variable, usually the same name, except removing `-` signs and using camel case instead.  In JavaScript, variable names can't have hyphens although they can have underscores (`_`).  If you go through the tutorials at https://www.freecodecamp.org/learn/back-end-development-and-apis/#managing-packages-with-npm , you'll see that you need to add these dependencies to the `package.json` file.  You can do this manually, or in Replit.com, you can click on the Packager icon: 
+
+![image](https://user-images.githubusercontent.com/9159008/184060817-29b6d418-5c8f-4d68-89bc-651e2499696d.png)
+
+And then search to install the packages you want.  Another option is to install each package using the command line with the command `npm install package name` (replacing package name with the desired one):
+
+![image](https://user-images.githubusercontent.com/9159008/184061190-73935fa6-4ce8-4997-b636-e9b751e47235.png)
+
+Once you install the packages, you'll want to make a `GET` request to the Lions Den course search.
