Add async axios example for GET request

--- a/day1-9-8-22.md
+++ b/day1-9-8-22.md
@@ -79,4 +79,4 @@ And then search to install the packages you want.  Another option is to install 
 
 ![image](https://user-images.githubusercontent.com/9159008/184061190-73935fa6-4ce8-4997-b636-e9b751e47235.png)
 
-Once you install the packages, you'll want to make a `GET` request to the Lions Den course search.
+Once you install the packages, you'll want to make a `GET` request to the Lions Den course search (https://lionsden.molloy.edu/ICS/Course_Search/Course_Search.jnz?portlet=Course_Schedules&screen=Advanced+Course+Search&screenType=next).  You'll do this with `axios`.  Refer to the `async` example here: https://axios-http.com/docs/example , and modify it to see the response for the course search.  Call the function and click the green `Run` button to see the output.
