async/await introduction with pictures

--- a/day1-9-8-22.md
+++ b/day1-9-8-22.md
@@ -79,4 +79,22 @@ And then search to install the packages you want.  Another option is to install 
 
 ![image](https://user-images.githubusercontent.com/9159008/184061190-73935fa6-4ce8-4997-b636-e9b751e47235.png)
 
-Once you install the packages, you'll want to make a `GET` request to the Lions Den course search (https://lionsden.molloy.edu/ICS/Course_Search/Course_Search.jnz?portlet=Course_Schedules&screen=Advanced+Course+Search&screenType=next).  You'll do this with `axios`.  Refer to the `async` example here: https://axios-http.com/docs/example , and modify it to see the response for the course search.  Call the function and click the green `Run` button to see the output.
+Once you install the packages, you'll want to make a `GET` request to the Lions Den course search (https://lionsden.molloy.edu/ICS/Course_Search/Course_Search.jnz?portlet=Course_Schedules&screen=Advanced+Course+Search&screenType=next).  You'll do this with `axios`.  Refer to the `async` example here: [https://axios-http.com/docs/example](https://axios-http.com/docs/example#:~:text=//%20Want%20to%20use%20async/await%3F%20Add%20the%20%60async%60%20keyword%20to%20your%20outer%20function/method.%0Aasync%20function%20getUser()%20%7B%0A%20%20try%20%7B%0A%20%20%20%20const%20response%20%3D%20await%20axios.get(%27/user%3FID%3D12345%27)%3B%0A%20%20%20%20console.log(response)%3B%0A%20%20%7D%20catch%20(error)%20%7B%0A%20%20%20%20console.error(error)%3B%0A%20%20%7D%0A%7D), and modify it to see the response for the course search.  Call the function and click the green `Run` button to see the output.
+
+```
+// Want to use async/await? Add the `async` keyword to your outer function/method.
+async function getUser() {
+  try {
+    const response = await axios.get('/user?ID=12345');
+    console.log(response);
+  } catch (error) {
+    console.error(error);
+  }
+}
+``` 
+
+In the code excerpt above, you'll notice an `async` and an `await`.  There are a lot of nuances here, but for now, think of `await` as saying "wait until I get the result from this until proceeding with later code in the **same function**".  If you want to use `await` in a function, that function needs to be prefixed with `async`.  You'll notice that the function itself does not have a `return` statement here.  If you wrote `return response` instead of `console.log(response)` and then tried using `console.log(getUser())` outside of the function, you would not see the response.  Instead, you would see a `Promise` with `<pending>`.
+With `console.log(response)`:
+![image](https://user-images.githubusercontent.com/9159008/184638326-29b9f1ba-b5ea-4338-9434-1371b1276e66.png)
+With `return response`:
+![image](https://user-images.githubusercontent.com/9159008/184639109-743f2732-bffd-4e99-a9be-c610aa164210.png)
