More await/async with example

--- a/day1-9-8-22.md
+++ b/day1-9-8-22.md
@@ -93,8 +93,30 @@ async function getUser() {
 }
 ``` 
 
-In the code excerpt above, you'll notice an `async` and an `await`.  There are a lot of nuances here, but for now, think of `await` as saying "wait until I get the result from this until proceeding with later code in the **same function**".  If you want to use `await` in a function, that function needs to be prefixed with `async`.  You'll notice that the function itself does not have a `return` statement here.  If you wrote `return response` instead of `console.log(response)` and then tried using `console.log(getUser())` outside of the function, you would not see the response.  Instead, you would see a `Promise` with `<pending>`.
+### `async/await`
+In the code excerpt above, you'll notice an `async` and an `await`.  There are a lot of nuances here, but for now, think of `await` as saying "wait until I get the result from this until proceeding with later code in the **same function**."  If you want to use `await` in a function, that function needs to be prefixed with `async`.  You'll notice that the function itself does not have a `return` statement here.  If you wrote `return response` instead of `console.log(response)` and then tried using `console.log(getUser())` outside of the function, you would not see the response.  Instead, you would see a `Promise` with `<pending>`.
+
 With `console.log(response)`:
+
 ![image](https://user-images.githubusercontent.com/9159008/184638326-29b9f1ba-b5ea-4338-9434-1371b1276e66.png)
+
 With `return response`:
+
 ![image](https://user-images.githubusercontent.com/9159008/184639109-743f2732-bffd-4e99-a9be-c610aa164210.png)
+
+This is because when you are declaring a `function` to be `async`, you are saying to the function I have other stuff to do so just ping me with your result when you're done and I'll do something with it when I'm ready.  This is what it means for the code to run `asyn`chronously.  The alternative is to run the function synchronously, which would mean that you would wait until the function is complete before proceeding.  The reason you don't want to have to wait here is because when you send a request, it could be a little while before you get a response.  If you just stopped everything and waited, the web site would become unresponsive (e.g., clicking on something would have no effect.)  So, instead, when you call (run) a function denoted `async`, anytime you have an `await`, you can leave the function and do other stuff.
+
+The `Promise` that's returned has a `then` and a `catch`, where you include functions for the what to do with the result after the function completes and what to do with an error if there were a problem.  **NOTE**: The function will run synchronously until the first `await`.  To understand this a little better, consider the following and see if you can figure out what the output will be without running it:
+
+```
+async function foo() {
+  console.log(1);
+  const x = await (2 + 2);
+  console.log(x);
+  const y = await (x + 1);
+  return y;
+}
+
+foo().then((result) => console.log(result));
+console.log(3);
+```
